--- a/templates/admin.html
+++ b/templates/admin.html
@@ -5,6 +5,14 @@
 <div class="admin content_box">
   <h2>Site Admin</h2>
 
+  {% with messages = get_flashed_messages() %}
+  {% if messages %}
+  {% for message in messages %}
+  <div class="notice" style="margin-left: 1em; margin-bottom: 1em;">{{message}}</div>
+  {% endfor %}
+  {% endif %}
+  {% endwith %}
+  
   <h3>User Management</h3>
 
   <table class="user_admin">
@@ -50,6 +58,25 @@
 	</tr>
       </tbody>
     </table>
+  </form>
+
+  <h3>Enabled Site Features</h3>
+
+  <form method="post" accept-charset="utf-8" action="{{url_for('update_site_features')}}">
+    <ul class="site_features_admin">
+      {% for feature_name in available_features %}
+      <li>
+        <input type="checkbox"
+               id="feature_{{feature_name}}"
+               name="feature_{{feature_name}}_enabled" value="1"
+               {% if feature_name in enabled_features %} checked {% endif %} />
+        <label for="feature_{{feature_name}}">{{feature_name}}</label>
+      </li>
+      {% endfor %}
+    </ul>
+    <p style="margin-left: 2em;">
+      <button type="submit" name="action" value="save">Update Site Features</button>
+    </p>
   </form>
 </div>
 
