--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,9 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>{{pagename + ' ' if pagename else ''}}[pinewiki]</title>
+    <title>{{pagename + ' ' if pagename else ''}}[{{g.site_helper.sitename()}}]</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📝</text></svg>">
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='wiki.css')}}" />
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='wiki.css')}}">
+    {% if g.site_helper.extra_css_url() %}
+    <link rel="stylesheet" type="text/css" href="{{g.site_helper.extra_css_url()}}">
+    {% endif %}
+    
     <script type="text/javascript" charset="utf-8" src="{{url_for('static', filename='encryption.js')}}"></script>
     {% if not (current_user.is_anonymous or current_user.profile['notifications'] == 'off') %}
     <script type="text/javascript" charset="utf-8" src="{{url_for('static', filename='notifications.js')}}"></script>
