--- a/templates/view_journal.html
+++ b/templates/view_journal.html
@@ -7,7 +7,7 @@
     <span class="pagename">{{pagename}}</span>
   </div>
   <div class="page_content content_box" style="overflow: auto;">
-    <div class="journal_navigation">
+    <div id="journal_navigation" class="journal_navigation">
       <div class="journal_user_selector">
         <form action="{{url_for('switch_journal_user')}}" id="journal_user_selector_form" method="get">
           <div class="current_journal_user"><strong>{{journal_user.username}}</strong>'s journal</div>
@@ -32,10 +32,14 @@
 
     {% if is_own_journal %}
     <div class="journal_new_entry_area">
-      <button value="post" onclick="document.getElementById('new_entry_form').style.display='block'; document.getElementById('new_entry_button').style.display='none'; document.getElementById('entry_content_textarea').focus(); return false;" id="new_entry_button">Post a new journal entry</button>
-      <form action="{{url_for('post_journal_entry')}}" id="new_entry_form"
-            style="display: none;" method="post" accept-charset="utf-8" class="post_journal_entry">
-	<textarea id="entry_content_textarea" name="entry_content" rows="8" cols="80"></textarea>
+      <button id="new_entry_button" value="post" onclick="enable_journal_entry();return false;" >Post a new journal entry</button>
+      <form class="post_journal_entry"
+            action="{{url_for('post_journal_entry')}}" id="new_entry_form"
+            style="display: none;" method="post" accept-charset="utf-8">
+        <div class="journal_new_entry_field_label">Journal entry title (optional):</div>
+        <input type="text" name="entry_title" value="" autofocus></input>
+        <div class="journal_new_entry_field_label">Entry text:</div>
+	<textarea id="entry_content_textarea" name="entry_content"></textarea>
         <div class="post_journal_entry_controls">
           <div class="post_journal_entry_controls_row">
             <button type="submit" name="action" value="save_with_system_time">Post using current server time</button>
@@ -50,7 +54,7 @@
           </div>
           {% endif %}
           <div class="post_journal_entry_controls_row">
-	    <button type="submit" name="action" value="cancel" accesskey="c" onclick="document.getElementById('new_entry_form').style.display='none'; document.getElementById('new_entry_button').style.display='block'; return false;">Cancel post</button>
+	    <button type="submit" name="action" value="cancel" accesskey="c" onclick="disable_journal_entry();return false;">Cancel post</button>
           </div>
         </div>
       </form>
@@ -60,17 +64,27 @@
     <div class="journal_entries_container">
     {% set header_ns = namespace(year=None, month=None) %}
     {% for page in journal_pages %}
-    <div class="journal_entry">
-      {% set page_year_month = helper.year_and_month_index_from_journal_pagename(page.name) %}
-      {% if page_year_month[0] != header_ns.year or page_year_month[1] != header_ns.month %}
-      {% set header_ns.year = page_year_month[0] %}
-      {% set header_ns.month = page_year_month[1] %}
-      <div class="journal_month_year_header">{{calendar.month_name[header_ns.month]}} {{header_ns.year}}</div>
-      {% endif %}
-      <div class="journal_timestamp">
-        <a href="{{url_for('edit_page', pagename=page.name)}}">{{helper.formatted_time_from_journal_pagename(page.name, True)}}</a>
+    {% set page_year_month = helper.year_and_month_index_from_journal_pagename(page.name) %}
+    {% if page_year_month[0] != header_ns.year or page_year_month[1] != header_ns.month %}
+    {% set header_ns.year = page_year_month[0] %}
+    {% set header_ns.month = page_year_month[1] %}
+    <div class="journal_month_year_header">{{calendar.month_name[header_ns.month]}} {{header_ns.year}}</div>
+    {% endif %}
+    <div id="journal_entry_{{loop.index}}"
+         class="journal_entry{% if loop.first %} expanded{% endif %}">
+      <div class="journal_entry_summary">
+        <span class="collapser"
+              onclick="toggle_journal_entry('journal_entry_{{loop.index}}');return false;"></span>
+        <a href="{{url_for('edit_page', pagename=page.name)}}"
+           class="journal_entry_timestamp">{{helper.formatted_time_from_journal_pagename(page.name, True)}}</a>
+        {% if page.title %}
+        &ndash;
+        <span class="journal_entry_title">{{page.title}}</span>
+        {% endif %}
       </div>
-      <div class="journal_entry_content">{{page.content_as_markdown()|safe}}</div>
+      <div class="journal_entry_content">
+        {{page.content_as_markdown()|safe}}
+      </div>
     </div>
     {% endfor %}
     </div>
