--- a/templates/view_chat.html
+++ b/templates/view_chat.html
@@ -51,7 +51,7 @@
 	{% if page.last_modified_by_user_id == current_user.user_id %}
 	<div class="chat_actions">
 	  <a href="{{url_for('edit_page', pagename=page.name)}}">Edit</a> -
-	  <a href="{{url_for('delete_chat_item', pagename=page.name)}}" onclick="return confirm('Really delete this chat message?')">Delete</a>
+	  <a href="{{url_for('delete_chat_item', pagename=page.name)}}" onclick="return confirm('Really delete this chat message?');">Delete</a>
 	</div>
 	{% endif %}
 	<strong>{{page.username}}</strong> at
