--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,6 +27,9 @@
   <body>
     {% block header %}
     <div id="header">
+      {% if g.site_helper.logo_html() %}
+      <div id="sitelogo">{{g.site_helper.logo_html()|safe}}</div>
+      {% endif %}
       <div id="tools">
 	<div class="toolbar">
 	  {% if current_user.is_anonymous %}
