--- a/templates/changes.html
+++ b/templates/changes.html
@@ -2,36 +2,42 @@
 
 {% block content %}
 
-<div class="content_box">
-  <h2>Recent Changes</h2>
-  <table class="events">
-    <tbody>
-      {% for event in events %}
-      <tr>
-	<td class="timestamp">{{event.formatted_timestamp()}}</td>
-	<td class="{{event.bytes_changed_css_class()}}">{{event.formatted_bytes_changed()|safe}}</td>
-	<td class="description">{{event.formatted_description()|safe}}</td>
-	<td class="commands">
-	  {% if event.is_diffable() %}
-	  <a href="#" onclick="alert('not yet implemented')">View Change</a> -
-	  <a href="#" onclick="alert('not yet implemented')">Compare</a>
-	  {% endif %}
-	</td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+<div class="page_wrapper">
+  <div class="pagename">
+    <span class="pagename">Recent Changes</span>
+  </div>
+  <div class="page_content content_box">
+    <table id="recent_changes">
+      <tbody>
+        {% for event in events %}
+        <tr>
+	  <td class="timestamp">{{event.formatted_timestamp()}}</td>
+	  <td class="{{event.bytes_changed_css_class()}}">{{event.formatted_bytes_changed()|safe}}</td>
+	  <td class="description">{{event.formatted_description()|safe}}</td>
+          {% if False %}
+	  <td class="commands">
+	    {% if event.is_diffable() %}
+	    <a href="#" onclick="alert('not yet implemented')">View Change</a> -
+	    <a href="#" onclick="alert('not yet implemented')">Compare</a>
+	    {% endif %}
+	  </td>
+          {% endif %}
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
 
-  <div class="pagination">
-    {% if more_available %}
-    <a href="{{url_for('recent_changes', page=page_number+1)}}">View older changes</a>
-    {% endif %}
-    {% if more_available and page_number > 1 %}
-    -
-    {% endif %}
-    {% if page_number > 1 %}
-    <a href="{{url_for('recent_changes', page=page_number-1)}}">View newer changes</a>
-    {% endif %}
+    <div class="pagination">
+      {% if more_available %}
+      <a href="{{url_for('recent_changes', page=page_number+1)}}">View older changes</a>
+      {% endif %}
+      {% if more_available and page_number > 1 %}
+      -
+      {% endif %}
+      {% if page_number > 1 %}
+      <a href="{{url_for('recent_changes', page=page_number-1)}}">View newer changes</a>
+      {% endif %}
+    </div>
   </div>
 </div>
 
