auto-width for chat messages

--- a/templates/view_chat.html
+++ b/templates/view_chat.html
@@ -60,7 +60,7 @@
 	</div>
 	{% endif %}
 	<strong>{{page.username}}</strong> at
-	{{helper.formatted_time_from_chat_pagename(page.name)}}:
+	{{helper.formatted_time_from_chat_pagename(page.name)}}
       </div>
       <div class="chat_content">
 	{{page.content_as_markdown()|safe}}
