--- a/static/wiki.css
+++ b/static/wiki.css
@@ -1,20 +1,20 @@
 
 
 body {
-    margin: 0;
-    padding: 0.5em 3em;
-    background-color: #eee;
-    font-family: monospace;
-    font-size: 15px;
-    overflow-y: scroll;  /* always show scrollbar to keep UI from jumping around slightly from page to page */
+  margin: 0;
+  padding: 0.5em 3em;
+  background-color: #eee;
+  font-family: monospace;
+  font-size: 15px;
+  overflow-y: scroll;  /* always show scrollbar to keep UI from jumping around slightly from page to page */
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-weight: bold;
-    line-height: 1.2;
-    clear: both;
-    padding: 0.1em 0.75em;
-    border-bottom: 2px solid #ddd;
+  font-weight: bold;
+  line-height: 1.2;
+  clear: both;
+  padding: 0.1em 0.75em;
+  border-bottom: 2px solid #ddd;
 }
 h1 { font-size: 2em; margin: 0 0 0.444em; }
 h1.login { border: none; padding: 0; }
@@ -44,33 +44,33 @@ div.breadcrumbs { font-size: 110%; }
 
 div.pagename { padding-left: 2em; font-size: 110%; }
 div.pagename span.pagename {
-    font-weight: bold;
-    color: #444;
-    border: 1px solid #666;
-    border-bottom: 2px solid #fff;
-    background-color: #fff;
-    margin-bottom: -2px;
-    margin-right: 1em;
-    padding: 0.25em 1em;
-    padding-bottom: 0;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+  font-weight: bold;
+  color: #444;
+  border: 1px solid #666;
+  border-bottom: 2px solid #fff;
+  background-color: #fff;
+  margin-bottom: -2px;
+  margin-right: 1em;
+  padding: 0.25em 1em;
+  padding-bottom: 0;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 div.page_content { padding: 1em 2em; }
 div.page_content div.commands {
-    float: right;
-    padding-bottom: 0.3em;
+  float: right;
+  padding-bottom: 0.3em;
 }
 div.page_content ul { list-style: square outside; }
 div.page_content hr {
-    border: 1px solid #999;
-    border-bottom: none;
-    height: 0;
+  border: 1px solid #999;
+  border-bottom: none;
+  height: 0;
 }
 div.page_content table {
-    border: 1px solid #999;
-    box-shadow: 0 0 0.2em #bbb;
-    margin-bottom: 1em;
+  border: 1px solid #999;
+  box-shadow: 0 0 0.2em #bbb;
+  margin-bottom: 1em;
 }
 /*div.page_content a.implicit_uri::before { content: "→ "; }*/
 
@@ -81,12 +81,12 @@ div.page_footer div.last_modified { float: right; text-align: right; }
 div.page_footer div.commands { font-size: 110%; padding-left: 1em; }
 
 div.page_content div.encrypted_chunk {
-    clear: both;
-    box-shadow: 0 0 0.5em 0 #cca inset;
-    background-color: #ffe;
-    padding: 0.75em 1.5em;
-    margin-top: 1em;
-    margin-bottom: 1em;
+  clear: both;
+  box-shadow: 0 0 0.5em 0 #cca inset;
+  background-color: #ffe;
+  padding: 0.75em 1.5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 div.page_content div.ciphertext { display: none; }
 div.page_content div.decrypted div.ciphertext { display: block; }
@@ -94,80 +94,91 @@ div.page_content div.encryption_commands { font-weight: bold; }
 div.page_content div.decrypted div.encryption_commands { display: none; }
 
 div.page_content blockquote {
-    clear: both;
-    margin: 0;
-    padding: 0.01em 1em;
-    border-left: 4px solid #fcc;
-    background-color: #fee;
+  clear: both;
+  margin: 0;
+  padding: 0.01em 1em;
+  border-left: 4px solid #fcc;
+  background-color: #fee;
 }
 
 div.page_wrapper { margin-top: 1em; }
 div.page_wrapper div.preview h2 {
-    border: none;
-    border-bottom: 4px dotted #ccc;
-    margin-top: 1em;
+  border: none;
+  border-bottom: 4px dotted #ccc;
+  margin-top: 1em;
 }
 
-div.pagination { padding: 0.5em 2em; }
+div.pagination {
+  clear: both;
+  padding: 0.5em 2em;
+}
 
 form.edit_page textarea,
 form.post_chat textarea,
 form.post_journal_entry .textfield
-form.journal_comment_area textarea {
-    border: 1px solid #aaa;
-    background-color: #f8f8f8;
-    padding: 0.2em 0.5em;
-    margin-bottom: 0.5em;
-    margin-top: 0.5em;
-    font-size: 110%;
-    box-shadow: 0 0 0.3em #aaa inset;
+                        form.journal_comment_area textarea {
+  border: 1px solid #aaa;
+  background-color: #f8f8f8;
+  padding: 0.2em 0.5em;
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
+  font-size: 110%;
+  box-shadow: 0 0 0.3em #aaa inset;
 }
 form.edit_page textarea, form.post_chat textarea {
-    width: 98%;
-    height: 500px;
+  width: 98%;
+  height: 500px;
 }
 
 form.edit_page div.journal_page_info { margin-bottom: 0.5em; }
 form.post_chat textarea { height: 150px; }
 
-div.chat_new_post_area { margin-bottom: 1em; }
+div.chat_new_post_area { clear: both; margin-bottom: 1em; }
 div.chat_new_post_area button { font-size: 110%; }
 div.chat_date_separator {
-    font-weight: bold;
-    font-size: 120%;
-    padding-left: 2em;
-    padding-top: 1em;
+  clear: both;
+  font-weight: bold;
+  font-size: 120%;
+  padding-left: 2em;
+  padding-top: 1em;
 }
 div.chat_post {
-    padding: 0;
-    box-shadow: 0 0 0.5em #ddd;
-    border: 1px solid #aaa;
-    margin: 1em 0;
-    margin-top: 0.1em;
+  clear: both;
+  float: left;
+  width: auto;
+  padding: 0;
+  box-shadow: 0 0 0.5em #ddd;
+  border: 1px solid #aaa;
+  margin: 1em 0;
+  margin-top: 0.1em;
 }
 div.chat_post div.chat_byline {
-    padding: 0.25em 1em;
-    border-bottom: 1px solid #ccc;
-    border-right: 1px solid #ccc;
+  padding: 0.25em 1em;
+  border-bottom: 1px solid #ccc;
+  border-right: 1px solid #ccc;
 }
-div.chat_post div.chat_actions { float: right; }
+div.chat_post div.chat_actions {
+  float: right;
+  margin-left: 2em;
+}
 div.chat_post div.chat_content { padding: 0 1em; }
 
 
 #check_in_button {
-    font-size: 125%;
-    font-family: monospace;
-    padding: 0.25em 0.7em;
-    margin-left: 1em;
+  font-size: 125%;
+  font-family: monospace;
+  padding: 0.25em 0.7em;
+  margin-left: 1em;
 }
 
 /* General "main page content" box with border and box-shadow.
    Used for several different page types. */
 div.content_box {
-    clear: both;
-    border: 1px solid #666;
-    background-color: #fff;
-    box-shadow: 0 0 1em 2px #ccc;
+  clear: both;
+  overflow: auto;
+  border: 1px solid #666;
+  background-color: #fff;
+  box-shadow: 0 0 1em 2px #ccc;
 }
 
 table#recent_changes { margin: 1em; border: none; box-shadow: none; }
@@ -185,46 +196,46 @@ table#recent_changes tr:hover td.byteschanged_positive { background-color: #beb;
 
 
 div.file_manager {
-    background-color: #f8f8ff;
-    padding: 1em 2em;
-    margin-top: 4em;
-    overflow: auto;
+  background-color: #f8f8ff;
+  padding: 1em 2em;
+  margin-top: 4em;
+  overflow: auto;
 }
 div.file_manager div.directories { width: 25%; float: left; }
 div.file_manager div.directories ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    margin-left: 2em;
-    margin-bottom: 1em;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  margin-left: 2em;
+  margin-bottom: 1em;
 }
 div.file_manager form.create_folder_form {
-    display: none;
-    margin-top: 1em;
+  display: none;
+  margin-top: 1em;
 }
 div.file_manager div.current_path { font-size: 120%; }
 div.file_manager div.commands { border-top: 1px solid #ccc; padding-top: 1em; }
 div.file_manager div.empty_directory {
-    padding-top: 1em;
-    float: left;
-    width: 73%;
+  padding-top: 1em;
+  float: left;
+  width: 73%;
 }
 div.file_manager table.file_table {
-    float: left;
-    width: 72%;
-    margin-left: 0.5em;
-    margin-top: 0.5em;
+  float: left;
+  width: 72%;
+  margin-left: 0.5em;
+  margin-top: 0.5em;
 }
 div.file_manager table.file_table th {
-    font-size: 110%;
-    text-align: left;
-    padding: 0.1em 0.5em;
-    border-bottom: 1px solid #ccc;
+  font-size: 110%;
+  text-align: left;
+  padding: 0.1em 0.5em;
+  border-bottom: 1px solid #ccc;
 }
 div.file_manager table.file_table td {
-    padding: 0.1em 0.25em;
-    white-space: nowrap;
-    vertical-align: middle;
+  padding: 0.1em 0.25em;
+  white-space: nowrap;
+  vertical-align: middle;
 }
 div.file_manager table.file_table .filesize, div.file_manager table.file_table .commands { text-align: right; }
 
@@ -237,34 +248,34 @@ div.move_file h2 { border: none; margin-top: 1em; }
 div.folder_list ul { list-style-type: none; }
 
 h2.monthname {
-    clear: both;
-    border: none;
-    font-weight: normal;
-    text-align: center;
-    padding-top: 1em;
+  clear: both;
+  border: none;
+  font-weight: normal;
+  text-align: center;
+  padding-top: 1em;
 }
 table.calendar {
-    border: none;
-    width: 100%;
+  border: none;
+  width: 100%;
 }
 table.calendar th, table.calendar td { width: 14%; /* ~1/7 */ }
 table.calendar th { font-size: 120%; color: #666; }
 table.calendar td.day {
-    height: 8em;
-    vertical-align: top;
-    padding: 0.15em 0.25em;
-    cursor: pointer;
+  height: 8em;
+  vertical-align: top;
+  padding: 0.15em 0.25em;
+  cursor: pointer;
 }
 table.calendar td.insidemonth { border: 1px solid #aaa; background-color: white; }
 table.calendar td.outsidemonth { border: none; }
 table.calendar td.current_day { background-color: #ffd; }
 table.calendar td.day div.datenumber {
-    font-weight: bold;
-    float: right;
-    text-align: right;
-    padding: 0.1em 0.3em;
-    overflow: auto;
-    background-color: white;
+  font-weight: bold;
+  float: right;
+  text-align: right;
+  padding: 0.1em 0.3em;
+  overflow: auto;
+  background-color: white;
 }
 /* Tighten up paragraph spacing a little inside calendar cells */
 table.calendar td.day p { margin: 0.35em 0; }
@@ -272,29 +283,29 @@ table.calendar td.day div.day_content { font-size: 90%; }
 
 /* These two are to allow each calendar cell to scroll vertically if there's too much content */
 table.calendar div.day_wrapper_1 {
-    position: relative;
-    height: 100%;
+  position: relative;
+  height: 100%;
 }
 table.calendar div.day_wrapper_2 {
-    overflow-y: auto;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+  overflow-y: auto;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 
 div.journal_navigation {
-    float: right;
-    width: 16em;
-    padding: 0.25em 0.5em;
-    margin-left: 1em;
-    margin-bottom: 0.5em;
-    height: 100%;
-    border: 2px solid #ddd;
-    /* background-color: #eee; */
-    box-shadow: 0 0 0.4em #ccc;
+  float: right;
+  width: 16em;
+  padding: 0.25em 0.5em;
+  margin-left: 1em;
+  margin-bottom: 0.5em;
+  height: 100%;
+  border: 2px solid #ddd;
+  /* background-color: #eee; */
+  box-shadow: 0 0 0.4em #ccc;
 }
 div.journal_navigation div.current_journal_user { margin-bottom: 0.25em; }
 div.journal_navigation a.selected { font-weight: bold; }
@@ -320,18 +331,18 @@ div.journal_new_entry_area input { font-size: 110%; font-family: monospace; widt
 div.post_journal_entry_controls { margin: 0.5em 0; }
 
 div.journal_month_year_header {
-    font-size: 150%;
-    font-weight: bold;
-    margin-bottom: 0.5em;
-    margin-top: 1em;
+  font-size: 150%;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+  margin-top: 1em;
 }
 div.journal_entry { width: auto; margin-bottom: 0.5em; }
 div.journal_entry_summary { margin-bottom: 0.2em; }
 .journal_entry_timestamp {
-    cursor: pointer;
-    color: #66f;
-    font-weight: bold;
-    border-bottom: 2px solid #ddf;
+  cursor: pointer;
+  color: #66f;
+  font-weight: bold;
+  border-bottom: 2px solid #ddf;
 }
 span.journal_entry_title {}
 span.journal_entry_comments_count { font-style: italic; color: #888; }
@@ -367,9 +378,9 @@ form.journal_comment_area textarea {
 
 div.sitemap { padding: 1em 2em; }
 table.sitemap th {
-    border-bottom: 1px solid #ccc;
-    text-align: left;
-    padding: 0 1em;
+  border-bottom: 1px solid #ccc;
+  text-align: left;
+  padding: 0 1em;
 }
 table.sitemap td { padding: 0 1em; }
 table.sitemap .filesize { text-align: right; }
