--- a/templates/check_in.html
+++ b/templates/check_in.html
@@ -4,19 +4,44 @@
 
 <div class="page_wrapper">
   <div class="pagename">
-    <span class="pagename">check_in</span>
+    <span class="pagename">Check In</span>
   </div>
   <div class="page_content content_box">
-    <h2>Check-In</h2>
+    <h3>Latest check-ins</h3>
     <ul class="check_in_list" id="check_in_container">
       {% for info in check_in_info %}
       <li>
-        <strong>{{info['username']}}</strong> checked in {{info['time_ago_string']}}
+        <div class="check_in_timestamp">
+          <strong>{{info['username']}}</strong> checked in {{info['time_ago_string']}}
+        </div>
+        {% if info['status_message'] %}
+        <div class="check_in_message">{{info['status_message']}}</div>
+        {% endif %}
       </li>
       {% endfor %}
     </ul>
-    <form action="check_in" method="post" accept-charset="utf-8">
-      <button type="submit" name="action" value="check_in" accesskey="c" id="check_in_button">Check in now</button>
+
+    <form action="check_in"
+          class="check_in_form"
+          method="post"
+          accept-charset="utf-8">
+      <div>
+        <button type="submit"
+                name="action"
+                value="check_in"
+                accesskey="c">Check in now</button>
+      </div>
+      <div style="margin-top: 2em; margin-bottom: 0.2em;">Status message (leave blank to clear):</div>
+      <div>
+        <input type="text"
+               name="status_message"
+               id="status_message_textfield"
+               value="{{check_in_info['status_message']}}" />
+        <button type="submit"
+                name="action"
+                value="update_status_message"
+                accesskey="s">Update</button>
+      </div>
     </form>
   </div>
 </div>
