--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,7 +39,7 @@
 	  Logged in as:
 	  <strong>{{current_user.username}}</strong> -
 	  <a href="{{url_for('view_profile')}}"{{(' class="current"' if toolbar_selection == 'profile' else '')|safe}}>Profile</a> -
-	  <a href="{{url_for('logout')}}">Log out</a>
+	  <a href="{{url_for('logout')}}">Log&nbsp;Out</a>
 	  {% endif %}
 	</div>
 	<div class="toolbar">
