--- a/templates/view_chat.html
+++ b/templates/view_chat.html
@@ -22,7 +22,7 @@
     
     <div class="chat_new_post_area">
       {% if rendered_preview %}
-      <div>Your message will appear as shown above.  Press Post to commit your changes.</div>
+      <div>Your message will appear as shown above.</div>
       {% else %}
       <button value="post"
               onclick="document.getElementById('post_message_form').style.display='block'; document.getElementById('post_message_button').style.display='none';"
